# secunda_test

./: .env.example  docker-compose.yml  pyproject.toml
src/domain/entities/: activity.py  base.py  building.py  organization.py
src/domain/exceptions/: activity.py  building.py  organization.py
src/domain/value_objects/: base.py  building.py  organization.py
src/infra/gateway/postgres/alchemy/: __init__.py  activity.py  base.py  building.py  main.py  organization.py
src/infra/gateway/postgres/alchemy/organization/: __init__.py  organization.py  phone_number.py
src/project/: settings.py
tests/: conftest.py
tests/test_orm.py/: test_building.py
